src/SQLParser.java
// Generated from D:\cole x_x\Base de datos\SQL.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__63=1, T__62=2, T__61=3, T__60=4, T__59=5, T__58=6, T__57=7, T__56=8, 
		T__55=9, T__54=10, T__53=11, T__52=12, T__51=13, T__50=14, T__49=15, T__48=16, 
		T__47=17, T__46=18, T__45=19, T__44=20, T__43=21, T__42=22, T__41=23, 
		T__40=24, T__39=25, T__38=26, T__37=27, T__36=28, T__35=29, T__34=30, 
		T__33=31, T__32=32, T__31=33, T__30=34, T__29=35, T__28=36, T__27=37, 
		T__26=38, T__25=39, T__24=40, T__23=41, T__22=42, T__21=43, T__20=44, 
		T__19=45, T__18=46, T__17=47, T__16=48, T__15=49, T__14=50, T__13=51, 
		T__12=52, T__11=53, T__10=54, T__9=55, T__8=56, T__7=57, T__6=58, T__5=59, 
		T__4=60, T__3=61, T__2=62, T__1=63, T__0=64, ID=65, NUM=66, STRING=67, 
		REAL=68, COMMENT=69, WS=70;
	public static final String[] tokenNames = {
		"<INVALID>", "'WHERE'", "'*'", "'DELETE'", "'CONSTRAINT'", "'<'", "'!='", 
		"'<='", "'AS'", "'PRIMARY'", "'RENAME'", "'ORDER'", "'SET'", "'COLUMNS'", 
		"'MAX'", "'AND'", "')'", "'CHAR'", "'TABLE'", "'SUM'", "'DESC'", "'='", 
		"'ADD'", "'SHOW'", "'DATABASES'", "'REFERENCES'", "'IS'", "'FLOAT'", "'DROP'", 
		"'USE'", "'FROM'", "'LIKE'", "'COUNT'", "'INSERT'", "'CHECK'", "'NOT'", 
		"'SELECT'", "'INT'", "'TO'", "'BY'", "','", "'ASC'", "'-'", "'('", "'TABLES'", 
		"'FOREIGN'", "'AVG'", "'OR'", "'VALUES'", "'DATE'", "'INTO'", "'.'", "'NULL'", 
		"'+'", "'UPDATE'", "'COLUMN'", "'ALTER'", "';'", "'KEY'", "'CREATE'", 
		"'MIN'", "'>'", "'DATABASE'", "'/'", "'>='", "ID", "NUM", "STRING", "REAL", 
		"COMMENT", "WS"
	};
	public static final int
		RULE_queries = 0, RULE_query = 1, RULE_databaseStm = 2, RULE_tableStm = 3, 
		RULE_showStm = 4, RULE_renameTbl = 5, RULE_alterStm = 6, RULE_alterStm2 = 7, 
		RULE_createStm = 8, RULE_createList = 9, RULE_createDef = 10, RULE_fieldDef = 11, 
		RULE_type = 12, RULE_constraint = 13, RULE_constraintType = 14, RULE_dropStm = 15, 
		RULE_insertStm = 16, RULE_updateStm = 17, RULE_assignList = 18, RULE_deleteStm = 19, 
		RULE_selectStm = 20, RULE_columns = 21, RULE_columnList = 22, RULE_columnItem = 23, 
		RULE_columnSource = 24, RULE_aggregate = 25, RULE_fromClause = 26, RULE_whereClause = 27, 
		RULE_orderClause = 28, RULE_orderList = 29, RULE_orderType = 30, RULE_expression = 31, 
		RULE_andExp = 32, RULE_notExp = 33, RULE_predExp = 34, RULE_addExp = 35, 
		RULE_multExp = 36, RULE_negateExp = 37, RULE_value = 38, RULE_exprList = 39, 
		RULE_idListFrom = 40, RULE_idList = 41, RULE_idMember = 42;
	public static final String[] ruleNames = {
		"queries", "query", "databaseStm", "tableStm", "showStm", "renameTbl", 
		"alterStm", "alterStm2", "createStm", "createList", "createDef", "fieldDef", 
		"type", "constraint", "constraintType", "dropStm", "insertStm", "updateStm", 
		"assignList", "deleteStm", "selectStm", "columns", "columnList", "columnItem", 
		"columnSource", "aggregate", "fromClause", "whereClause", "orderClause", 
		"orderList", "orderType", "expression", "andExp", "notExp", "predExp", 
		"addExp", "multExp", "negateExp", "value", "exprList", "idListFrom", "idList", 
		"idMember"
	};

	@Override
	public String getGrammarFileName() { return "SQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueriesContext extends ParserRuleContext {
		public QueriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queries; }
	 
		public QueriesContext() { }
		public void copyFrom(QueriesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MulQContext extends QueriesContext {
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public MulQContext(QueriesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitMulQ(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleQContext extends QueriesContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public SingleQContext(QueriesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitSingleQ(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueriesContext queries() throws RecognitionException {
		QueriesContext _localctx = new QueriesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_queries);
		int _la;
		try {
			int _alt;
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new SingleQContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(86); query();
				setState(88);
				_la = _input.LA(1);
				if (_la==57) {
					{
					setState(87); match(57);
					}
				}

				}
				break;

			case 2:
				_localctx = new MulQContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90); query();
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(91); match(57);
						setState(92); query();
						}
						} 
					}
					setState(97);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(99);
				_la = _input.LA(1);
				if (_la==57) {
					{
					setState(98); match(57);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	 
		public QueryContext() { }
		public void copyFrom(QueryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DataStmContext extends QueryContext {
		public DatabaseStmContext databaseStm() {
			return getRuleContext(DatabaseStmContext.class,0);
		}
		public DataStmContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDataStm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TblStmContext extends QueryContext {
		public TableStmContext tableStm() {
			return getRuleContext(TableStmContext.class,0);
		}
		public TblStmContext(QueryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitTblStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new DataStmContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(103); databaseStm();
				}
				break;

			case 2:
				_localctx = new TblStmContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(104); tableStm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatabaseStmContext extends ParserRuleContext {
		public DatabaseStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_databaseStm; }
	 
		public DatabaseStmContext() { }
		public void copyFrom(DatabaseStmContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DropDBContext extends DatabaseStmContext {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public DropDBContext(DatabaseStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDropDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RenameDBContext extends DatabaseStmContext {
		public List<TerminalNode> ID() { return getTokens(SQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SQLParser.ID, i);
		}
		public RenameDBContext(DatabaseStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitRenameDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CreateDBContext extends DatabaseStmContext {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public CreateDBContext(DatabaseStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitCreateDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ShowDBContext extends DatabaseStmContext {
		public ShowDBContext(DatabaseStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitShowDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UseDBContext extends DatabaseStmContext {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public UseDBContext(DatabaseStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitUseDB(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatabaseStmContext databaseStm() throws RecognitionException {
		DatabaseStmContext _localctx = new DatabaseStmContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_databaseStm);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case 59:
				_localctx = new CreateDBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(107); match(59);
				setState(108); match(62);
				setState(109); match(ID);
				}
				break;
			case 56:
				_localctx = new RenameDBContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(110); match(56);
				setState(111); match(62);
				setState(112); match(ID);
				setState(113); match(10);
				setState(114); match(38);
				setState(115); match(ID);
				}
				break;
			case 28:
				_localctx = new DropDBContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(116); match(28);
				setState(117); match(62);
				setState(118); match(ID);
				}
				break;
			case 23:
				_localctx = new ShowDBContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(119); match(23);
				setState(120); match(24);
				}
				break;
			case 29:
				_localctx = new UseDBContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(121); match(29);
				setState(122); match(62);
				setState(123); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableStmContext extends ParserRuleContext {
		public CreateStmContext createStm() {
			return getRuleContext(CreateStmContext.class,0);
		}
		public ShowStmContext showStm() {
			return getRuleContext(ShowStmContext.class,0);
		}
		public SelectStmContext selectStm() {
			return getRuleContext(SelectStmContext.class,0);
		}
		public InsertStmContext insertStm() {
			return getRuleContext(InsertStmContext.class,0);
		}
		public DeleteStmContext deleteStm() {
			return getRuleContext(DeleteStmContext.class,0);
		}
		public AlterStmContext alterStm() {
			return getRuleContext(AlterStmContext.class,0);
		}
		public DropStmContext dropStm() {
			return getRuleContext(DropStmContext.class,0);
		}
		public RenameTblContext renameTbl() {
			return getRuleContext(RenameTblContext.class,0);
		}
		public UpdateStmContext updateStm() {
			return getRuleContext(UpdateStmContext.class,0);
		}
		public TableStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableStm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitTableStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableStmContext tableStm() throws RecognitionException {
		TableStmContext _localctx = new TableStmContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tableStm);
		try {
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126); alterStm();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127); createStm();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128); deleteStm();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129); dropStm();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(130); insertStm();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(131); selectStm();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(132); updateStm();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(133); renameTbl();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(134); showStm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowStmContext extends ParserRuleContext {
		public ShowStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showStm; }
	 
		public ShowStmContext() { }
		public void copyFrom(ShowStmContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ShowTblContext extends ShowStmContext {
		public ShowTblContext(ShowStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitShowTbl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ShowColContext extends ShowStmContext {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public ShowColContext(ShowStmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitShowCol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowStmContext showStm() throws RecognitionException {
		ShowStmContext _localctx = new ShowStmContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_showStm);
		try {
			setState(143);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new ShowTblContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(137); match(23);
				setState(138); match(44);
				}
				break;

			case 2:
				_localctx = new ShowColContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(139); match(23);
				setState(140); match(13);
				setState(141); match(30);
				setState(142); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RenameTblContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SQLParser.ID, i);
		}
		public RenameTblContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_renameTbl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitRenameTbl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RenameTblContext renameTbl() throws RecognitionException {
		RenameTblContext _localctx = new RenameTblContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_renameTbl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(56);
			setState(146); match(18);
			setState(147); match(ID);
			setState(148); match(10);
			setState(149); match(38);
			setState(150); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterStmContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public AlterStm2Context alterStm2(int i) {
			return getRuleContext(AlterStm2Context.class,i);
		}
		public List<AlterStm2Context> alterStm2() {
			return getRuleContexts(AlterStm2Context.class);
		}
		public AlterStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterStm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitAlterStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlterStmContext alterStm() throws RecognitionException {
		AlterStmContext _localctx = new AlterStmContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_alterStm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(56);
			setState(153); match(18);
			setState(154); match(ID);
			setState(155); alterStm2();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==40) {
				{
				{
				setState(156); match(40);
				setState(157); alterStm2();
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterStm2Context extends ParserRuleContext {
		public AlterStm2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterStm2; }
	 
		public AlterStm2Context() { }
		public void copyFrom(AlterStm2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DropConContext extends AlterStm2Context {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public DropConContext(AlterStm2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDropCon(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddConContext extends AlterStm2Context {
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public AddConContext(AlterStm2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitAddCon(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DropColContext extends AlterStm2Context {
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public DropColContext(AlterStm2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDropCol(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddColContext extends AlterStm2Context {
		public Token not;
		public ConstraintContext con;
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AddColContext(AlterStm2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitAddCol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlterStm2Context alterStm2() throws RecognitionException {
		AlterStm2Context _localctx = new AlterStm2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_alterStm2);
		int _la;
		try {
			int _alt;
			setState(189);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new AddColContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(163); match(22);
				setState(164); match(55);
				setState(165); match(ID);
				setState(166); type();
				setState(169);
				_la = _input.LA(1);
				if (_la==35) {
					{
					setState(167); ((AddColContext)_localctx).not = match(35);
					setState(168); match(52);
					}
				}

				setState(179);
				_la = _input.LA(1);
				if (_la==4) {
					{
					setState(171); ((AddColContext)_localctx).con = constraint();
					setState(176);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
					while ( _alt!=2 && _alt!=-1 ) {
						if ( _alt==1 ) {
							{
							{
							setState(172); match(40);
							setState(173); constraint();
							}
							} 
						}
						setState(178);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
					}
					}
				}

				}
				break;

			case 2:
				_localctx = new AddConContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(181); match(22);
				setState(182); constraint();
				}
				break;

			case 3:
				_localctx = new DropColContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(183); match(28);
				setState(184); match(55);
				setState(185); match(ID);
				}
				break;

			case 4:
				_localctx = new DropConContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(186); match(28);
				setState(187); match(4);
				setState(188); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateStmContext extends ParserRuleContext {
		public CreateListContext createList() {
			return getRuleContext(CreateListContext.class,0);
		}
		public TerminalNode ID() { return getToken(SQLParser.ID, 0); }
		public CreateStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createStm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitCreateStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateStmContext createStm() throws RecognitionException {
		CreateStmContext _localctx = new CreateStmContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_createStm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191); match(59);
			setState(192); match(18);
			setState(193); match(ID);
			setState(194); match(43);
			setState(196);
			_la = _input.LA(1);
			if (_la==4 || _la==ID) {
				{
				setState(195); createList();
				}
			}

			setState(198); match(16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateListContext extends ParserRuleContext {
		public CreateListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createList; }
	 
		public CreateListContext() { }
		public void copyFrom(CreateListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MulDefContext extends CreateListContext {
		public CreateDefContext createDef() {
			return getRuleContext(CreateDefContext.class,0);
		}
		public MulDefContext(CreateListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitMulDef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleDefContext extends CreateListContext {
		public CreateListContext createList() {
			return getRuleContext(CreateListContext.class,0);
		}
		public CreateDefContext createDef() {
			return getRuleContext(CreateDefContext.class,0);
		}
		public SingleDefContext(CreateListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitSingleDef(this);
			else return visitor.visitChildren(this);
		}
	}

